# live_data

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml  run-server.yml
client/: base.py
data/: lok_sabha_holdings.csv
examples/: data_monitor.py  simple_strategy.py
notebooks/: mock_server.py  strategy_walkthrough.ipynb
server/: config.py  hub.py  main.py
server/models/: __init__.py  base.py  company.py  corporate.py  financials.py  gdelt.py  holdings.py  news.py  price.py
server/sources/: __init__.py  base.py  company.py  corporate.py  financials.py  gdelt.py  groww.py  holdings.py  news.py  nse.py
