[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-data"
version = "0.1.0"
description = "Live trading data aggregation server for Indian equity markets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
data-server = "server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
